--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -15,7 +15,7 @@
   
   <p>
     <strong>Comment:</strong>
-    <%= @blog.comment.count.to_i + "comment" %>
+    <%= @blog.comment.count.to_s + "comment" %>
   </p>
   
   <p>
